# i-am-learning-python

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/learn/datatypes/: test_dict.py  test_list.py  test_list_tricks.py  test_set.py  test_strings.py  test_strings_substring.py  test_strings_tricks.py  test_types.py
src/learn/etl/: test_pandas.py
src/learn/io/: test_serialize.py
src/learn/list_vs_map_heap/: test_converting_list_map.py  test_heap.py
src/tests/: test_main.py
