[tool.poetry]
name = "your-project-name"
version = "1.0.0"
description = "A brief description of your project"
authors = ["Siddiq"]
package-mode = false

# Dependencies for your project
[tool.poetry.dependencies]
python = "^3.9"


# Development dependencies
[tool.poetry.dev-dependencies]
pytest = "^7.0"  # Add testing frameworks or other dev tools here
black = "^23.0"  # Code formatter
mypy = "^1.0"    # Optional: Type checker

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
